# synarmo

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  ReleaseNotes.md  contexts.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.html  ARCHITECTURE.md  DEPLOYMENT.html  DEPLOYMENT.md  _config.yml  api-reference.html  api-reference.md  index.md  synarmo_flow.md  usage-guide.html  usage-guide.md
examples/: quickstart.py
ios/: .gitignore  README.md  TODO-iOS.md
ios/Docs/: llama-cpp-integration.md
ios/Synarmo/: ComposeViewModel.swift  ContentView.swift  InferenceEngine.swift  LlamaCppBridge.h  LlamaCppBridge.mm  ModelDownloadService.swift  Models.swift  SettingsStore.swift  SettingsView.swift  SpeechService.swift  SynarmoApp.swift
ios/Synarmo.xcodeproj/: project.pbxproj
ios/Synarmo/Supporting/: Info.plist
ios/SynarmoTests/: SynarmoTests.swift
ios/scripts/: fetch_llama_xcframework.sh
scripts/: logprobs_test.py  synarmo_interactive_setup.sh  synarmo_pkg_setup.sh  test_base_model_autocomplete.py  test_base_model_autocomplete.py.bak  test_package_predict.py  test_predict.py  test_repeat_penalty.py
src/synarmo/: __init__.py  autocomplete_eval.py  cli.py  config.py  context.py  contexts.py  engine.py  infrastructure.py  memory.py  prompts.py  suggestions.py
src/synarmo/models/: __init__.py  base.py  factory.py  llama_cpp_backend.py  mock_backend.py
src/synarmo/service/: __init__.py  app.py
src/synarmo/ui/: __init__.py
src/synarmo/ui/static/css/: synarmo.css
src/synarmo/ui/static/js/: synarmo.js
src/synarmo/ui/templates/: __init__.py  synarmo.html
src/synarmo/voice/: __init__.py  service.py
tests/: test_autocomplete_eval.py  test_cli.py  test_config.py  test_context.py  test_contexts.py  test_engine.py  test_engine_fill_pass.py  test_engine_overgeneration.py  test_engine_threading.py  test_llama_cpp_backend.py  test_prompts.py  test_service.py  test_suggestions.py  test_voice.py
