[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "synarmo"
version = "0.1.9"
description = "Synarmo is a local inference, low-latency auto-suggest engine and Python package for personalized next-word and short-phrase prediction. Built for context-aware local inference, it provides service APIs, an extensible inference architecture, and llama.cpp/GGUF support for swappable local CPU or GPU-accelerated models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Synarmo contributors" }]
dependencies = []

[project.optional-dependencies]
llama = ["llama-cpp-python>=0.2.90", "huggingface-hub>=0.23"]
service = ["fastapi>=0.111", "uvicorn[standard]>=0.30"]
dev = ["pytest>=8.2", "ruff>=0.5"]

[project.scripts]
synarmo = "synarmo.cli:app"

[tool.hatch.build]
exclude = [
    "/assets",
    "*.log",
    ".synarmo-service.log",
]

[tool.hatch.build.targets.wheel]
packages = ["src/synarmo"]

[tool.hatch.build.targets.sdist]
only-include = [
    "README.md",
    "pyproject.toml",
    "src/synarmo",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
